--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@
                 <i class="qlist__head" data-feather="music"></i>
                 <a
                     target="blank"
-                    href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                    href="https://www.youtube.com/watch?v=JFm7YDVlqnI&list=PL-FVH5VWgRPHNz24zZ5_FLHQWoidN6O1d"
                     class="qlist__link"
-                    >Inspirational</a
+                    >Rap</a
                 >
                 <a
                     target="blank"
-                    href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                    href="https://www.youtube.com/watch?v=jgpJVI3tDbY"
                     class="qlist__link"
                     >Classic</a
                 >
                 <a
                     target="blank"
-                    href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+                    href="https://www.youtube.com/watch?v=WPni755-Krg"
                     class="qlist__link"
-                    >Oldies</a
+                    >Study</a
                 >
                 <a
                     target="blank"
@@ -110,28 +110,28 @@
             <div class="card qlist qlist__2">
                 <i class="qlist__head" data-feather="coffee"></i>
                 <a
-                    href="https://www.linkedin.com"
+                    href="drive.google.com"
                     target="blank"
                     class="qlist__link"
-                    >LinkedIn</a
+                    >Google Drive</a
                 >
                 <a
-                    href="https://dribbble.com/"
+                    href="https://soap2day.to/"
                     target="blank"
                     class="qlist__link"
-                    >Dribble</a
+                    >Movies</a
                 >
                 <a
-                    href="https://www.udemy.com/"
+                    href="https://www.reddit.com/"
                     target="blank"
                     class="qlist__link"
-                    >Udemy</a
+                    >Reddit</a
                 >
                 <a
-                    href="https://www.figma.com/files/recent"
+                    href="https://www.quora.com"
                     target="blank"
                     class="qlist__link"
-                    >Figma</a
+                    >Quora</a
                 >
             </div>
         </div>
