--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div class="card qlist qlist__2">
                 <i class="qlist__head" data-feather="coffee"></i>
                 <a
-                    href="drive.google.com"
+                    href="https://drive.google.com/drive/"
                     target="blank"
                     class="qlist__link"
                     >Google Drive</a
