--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </a>
                 <a
                     target="blank"
-                    href="https://flipboard.com/"
+                    href="https://openvellum.ecollege.com/course.html?courseId=16243566&HepID=834c7a6e288fb4b2d952061535404478#10001"
                     class="qlink__link qlink__link-4"
                 >
                     <i class="qlink__icon" data-feather="bookmark"></i>
